# roomba500

./: .gitignore  CMakeLists.txt  README.md  installdependencies.sh  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_node_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  slamtoolbox_online_sync.yaml
doc/: Magnetometer calibration ellipsoid.ipynb  Magnetometer calibration.ipynb  Orientation calculation tests.ipynb  hard_iron_calibration.xlsx  mag_out.csv  raw_magnetometer_data.csv
jupyter/: PID.ipynb  angletest.ipynb  basestate.py  cmdvel.ipynb  drivetoposition.py  idlestate.py  map.py  pidcontroller.py  priorityqueue.py  robotcontroller.py  rotatetostate.py  trigfunctions.py
launch/: accel.launch  amcl.launch  basecontroller.launch  differentialodometry.launch  dummyodomtomap.launch  exampleydlaserx4.launch  frontierexploration.launch  gmapping.launch  hardware.launch  hectorslam.launch  highlevel.launch  highlevelsimulation.launch  imu.launch  jupytersim.launch  lidar.launch  lidarandbase.launch  navigation.launch  pathmanager.launch  pathmanagersimulation.launch  pathmanagersimulationslam.launch  roomba.launch  roombainterface.launch  roombalogger.launch  rviz.launch  simulation.launch  slam.launch  slamtoolbox.launch  supervisor.launch  supervisorprofile.launch  supervisorsimulation.launch  turtlebot.launch
maps/: Turtlebot3Simulation.xlsx  map.pgm  map.yaml  turtlebot3.pgm  turtlebot3.yaml
msg/: Area.msg  DiffMotorSpeeds.msg  NavigationInfo.msg  RoombaSensorFrame.msg
(+61 files in other folders)
